--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ ul{
 	
 <center><img src="C:\Users\divya\Desktop/download.JPEG" height="300" width="300"</center>
 
-<body background="/background.JPG">
+<body background="background.JPG">
  
 
 </body>
