--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ ul{
 	<li><a href="term and condition.html">term and conditions</a></li>
 </h5></ul>
 	
-<center><img src="C:\Users\divya\Desktop/download.JPEG" height="300" width="300"</center>
+<center><img src="/download.JPEG" height="300" width="300"</center>
 
 <body background="background.JPG">
  
