--- a/term and condition.html
+++ b/term and condition.html
@@ -4,9 +4,9 @@
 
 <body>
 
-<center><img src="C:\Users\divya\Desktop/download.jpeg" height="300" width="300" </center>
+<center><img src="download.jpeg" height="300" width="300" </center>
 
-<body background="C:\Users\divya\Desktop/best grey.JFIF">
+<body background="best grey.JFIF">
 
 
 <h1>TERM AND CONDITIONS</h1>
