Update term and condition.html

--- a/term and condition.html
+++ b/term and condition.html
@@ -6,7 +6,7 @@
 
 <center><img src="download.jpeg" height="300" width="300" </center>
 
-<body background="best grey.JFIF">
+<body background="best grey.jpeg">
 
 
 <h1>TERM AND CONDITIONS</h1>
