--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <title>DIVYANSH STUDY VLOG</title>
-<link rel="stylesheet" href="s1.css">
+<link rel="shortout icon" type="image/x-icon" href="C:\Users\divya\Desktop/download.JPEG" />
 <style>
 ul{
    list-style-type: none;
@@ -49,17 +49,17 @@ ul{
 <body>
 
 <h5><ul>
-    <li><a class="active" href="#home">home</a></li>
-	<li><a href="#login">login</a></li>
+    <li><a class="active" href=" https://divyanshstudies.github.io/DivyanshStudyVlog/">home</a></li>
+	<li><a href="login .html">login</a></li>
 	<li><a href="#signup">signup</a></li>
 	<li><a href="about us.html">About Us</a></li>
-	<li><a href="#contact us">contact us</a></li>
+	<li><a href="contact us.html">contact us</a></li>
 	<li><a href="term and condition.html">term and conditions</a></li>
 </h5></ul>
 	
-<center><img src="download.jpeg" height="300" width="300"</center>
+<center><img src="C:\Users\divya\Desktop/download.JPEG" height="300" width="300"</center>
 
-<body background="background.jpeg">
+<body background="C:\Users\divya\Pictures/website background.JPG">
  
 
 </body>
