Update term and condition.html

--- a/term and condition.html
+++ b/term and condition.html
@@ -1,17 +1,91 @@
 <!DOCTYPE html>
 <html>
-<head> <title> Term and Conditions</title></head>
+<head> 
+<title> Term and Conditions</title> 
+<link rel="shortout icon" type="image/x-icon" href="C:\Users\divya\Desktop/download.JPEG"/>
+<style>
+p{
+text-align:left;
+margin-left:70px;
+font-size:17px;    
+}
+
+ul{text-align:left;
+margin-left:70px;
+font-size:17px;
+}  
+ol{text-align:left;
+margin-left:70px;
+font-size:17px;
+}
+</style>
+</head>
 
 <body>
+<center><a href="https://divyanshstudies.github.io/DivyanshStudyVlog/"><img src="C:\Users\divya\Desktop/download.jpeg" height="300" width="300"></a></center>
+<body background="C:\Users\divya\Desktop/best grey.JFIF">
 
-<center><img src="download.jpeg" height="300" width="300" </center>
-
-<body background="best grey.jpeg">
-
-
-<h1>TERM AND CONDITIONS</h1>
-
-
-
-
+<center><h1><strong>TERM AND CONDITIONS</strong></h1><center>
+ <hr color="red" width="89%" height="2px">
+<p><b>WELCOME TO DIVYANSH STUDIES!!</b></p>
+<p> These terms and conditions outline the rules and regulation for the use of Divyansh Studies webpage,Which is located at https://divyanshstudies.github.io/DivyanshStudyVlog/.</p>
+<p>These terms and conditions govern your use of this website; by using this website, you accept these terms and conditions in full.   If you disagree with these terms and conditions or any part of these terms and conditions, you must not use this website.</p>
+<p>our site is operated by Divyansh Studies.we are incorporated and registered in India,Delhi To contect us,please email 20.divyanshaggarwal2007@gmail.com.</p>
+<p>by using our website,you confirm that you accept these terms and that you agree to comply with them.if you do not agree to these terms, you must not use our website.we recommended that you print a copy of these terms for future reference.these terms refers to the following additional terms,which also apply to your use of our website.we ammends these terms from time to time.everytime you wish to use our websites,please check these terms and condition to ensure you understand the terms that apply at that time these terms were most recentely updated in may 2019.</p>	 
+<h1 style ="text-align:left;margin-left:70px;">cookies</h1>
+<p>we employ the use of cookies.By accessing DivyanshStudies,you agreed to use cookies in agreement with the DivyanshStudies's privacy policy</p>
+<p>most interactive websites use cookies to let us retrieve the user's detail for each visit. cookies are used by our websites to enable the functionality of certain areas to make it easier for people visting our website. Some of our affiliate/advertising partners may also use cookies.</p>
+<h1 style ="text-align:left;margin-left:70px;">Acceptable Use</h1>
+<p>you must not use Divyansh Studies website in anyway that causes,or may cause,damage to the website or impaiment of the availablity or accessibilty of the website;or in anyway which is unlawful,illegeal,fraudment or harmful,or in connection with any unlawful, illegal, fraudulent or harmful purpose or activity</p>
+<p>you must not use this website to copy,store host,transmit,send,use,publishor distribute any material which consists of(or is linked to) any spyware,computer virus,trojan horse, worm, keystroke logger, rootkitor other malicious computer software.</p>
+<p>You must not conduct any systematic or automated data collection activities (including without limitation scraping, data mining, data extraction and data harvesting) on or in relation to this website without Maths express written consent.</p>
+<p>you must not use this website to transmit or send unsolicited commercial communications.</p>
+<p>you must not use this website for any purpose related to marketing without maths express written consent.</p>
+<h1 style ="text-align:left;margin-left:70px;">License To Use This Website</h1>
+<p> unless otherwise stated, maths marketing and or its licensors owm the intellectual property rights in the websites and material on the websites.subjects to the restriction set out below,all these intellectual property right are reserved.</p>
+<p> you may view,downloads for catching purpose only,and print pages or the free learning material from the websites for your own personal use, subjects to the restrictions set out below and elsewhere in these term and conditions.</p>
+<p style ="text-align:left;margin-left:70px;"> you must not:</p>
+<ul>
+<li> Republic material from this website(including republication on another website).</li>
+<li> Sell,rent or sub- license material from the website</li>
+<li> Show any material from the website in public</li>
+<li>Reproduce,duplicate,copy or otherwise expoilts material on this website for a commercial purpose</li>
+<li>Redistribute material from this website except for content specially and exprssly made available for redistribution.</li>
+</ul>
+<h1 style ="text-align:left;margin-left:70px;">No Warrenties</h1>
+<p>This website is provided "as is" without any representatives or warrenties, express or impiled.Maths marketing makes no representation or warrenties in relation to this website or the information and material provided on this website.</p>
+<p>without prejudice to the generality of the dorgoing paragraph,Maths website does not warrant that:</p>
+<ul>
+<li>This website will be constantly available,or available at all;or</li>
+<li> The information on this website is completed,true,accurate or non-misleading.</li>
+</ul>
+<h1 style ="text-align:left;margin-left:70px;">Disclaimer</h1>
+<p>All the material on DivyanshStudies Websites are provided as is.DivyanshStudies no warrenties, may it be expressed or impiled,therefore negates all other warrenties,furthermore,DivyanshStudies doees not make any representation concering the accuracy  or reliability of the use of the materials on it's website or otherwise realting to such materials or any sites linked to this website.</p>
+<h1 style ="text-align:left;margin-left:70px;">Limitation</h1>
+<p>DivyanshStudies or it's supplier will not be hold accountable for any damages that will arise with the use or inability to use the materials on the DivyanshStudies website,even if Divyansh Studies or an authorize representative of this Website has been notified,orally or written, of the possibility of such damage.Some jurisdiction does not allow limitation on impiled warrenties or limitation of liability for incidental damges, these limitations may not apply to you.</p>
+<h1 style ="text-align:left;margin-left:70px;">Rivision and Errata</h1>
+<p>The materials appering on DivyanshStudies website may include technical,typographical,or photographic errors.Divyansh Studies will not promise that any of the materials in this website are accurate, complete, or current.DivyanshStudies may change the materials contained on it's website at any time without notice,DivyanshStudies does not make any commitment to update the materials.</p>
+<h1 style ="text-align:left;margin-left:70px;">Links</h1>
+<p>Divyansh Studies has not reviewed all of sites linked to it's website ans is not responsible for the content of any such linked site.The presence of any linked website is at the user's own risk.</p>
+<h1 style ="text-align:left;margin-left:70px;">Site Term of Use Modification</h1>
+<p>DivyanshStudies may revice these Terms of use for it's website at any time without prior notice. By using this website,you are agreeing to be bound by the current version of these Term and Conditions of Use.</p>
+<h1 style ="text-align:left;margin-left:70px;">Your Policy</h1>
+<P><a href ="Privacy Policy.html">Please read our privacy policy</a>
+<h1 style ="text-align:left;margin-left:70px;">Governing Law</h1>
+<p>Any claim related to DivyanshStudies website shall be governed by the laws of us without regards to it's conflict of law provisions.</p>
+<h1 style ="text-align:left;margin-left:70px;">Update to User Agreement</h1>
+<p>DivyanshStudies reserve the right to update the terms and conditions and will post a notice on the website of any material or significant changes.If you continue to use DivyanshStudies after this notice,you agree to be bound by the updated Terms and Conditions.</p>
+<h1 style ="text-align:left;margin-left:70px;">Dispute Resolution</h1>
+<p> if for any reason you are unhappy with the service provided by DivyanshStudies,we will endeavour to resolve the matter amicably and  welcome communication from you to 20.divyanshaggarwa2007@gmail.com</p>
+<h1 style ="text-align:left;margin-left:70px;">Security</h1>
+<ol>
+<li>DivyanshStudies takes the security and privacy of all of it's users very seriously and have put in place measures to keep all of our users data safe and secure, using industry best practice.</li>
+<li>We will never ask you for password and it is your responsibility to keep it secure at all times.</li>
+<li>DivyanshStudies cannot guarantee that our security measures will never be breached.However,in the event of a security breach,we will inform all of our users as soon as we become aware and advise them of steps they can take to protect their data.</li>
+</ol>
+<h1 style ="text-align:left;margin-left:70px;">Contact Details</h1>
+<p>you can contact us by email at 20.divyanshaggarwal2007@gmail.com</p>
+<p><b>THANKS TO READ THESE TERMS AND CONDITIONS!!</b></p>
 </body>
+
+</html>
