--- a/contact us.html
+++ b/contact us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
-<head> <title> ABOUT US</title>
+<head> <title> CONTACT US</title>
 <link rel="shortout icon" type="image/x-icon" href="C:\Users\divya\Desktop/download.JPEG" />
 </head>
