--- a/contact us.html
+++ b/contact us.html
@@ -3,3 +3,4 @@
 <head> <title> CONTACT US</title>
 <link rel="shortout icon" type="image/x-icon" href="C:\Users\divya\Desktop/download.JPEG" />
 </head>
+</html>
