Update term and condition.html

--- a/term and condition.html
+++ b/term and condition.html
@@ -23,7 +23,7 @@ font-size:17px;
 
 <body>
 <center><a href="https://divyanshstudies.github.io/DivyanshStudyVlog/"><img src="C:\Users\divya\Desktop/download.jpeg" height="300" width="300"></a></center>
-<body background="C:\Users\divya\Desktop/best grey.JFIF">
+<body background="C:\Users\divya\Desktop/best grey.jpeg">
 
 <center><h1><strong>TERM AND CONDITIONS</strong></h1><center>
  <hr color="red" width="89%" height="2px">
