--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <title>DIVYANSH STUDY VLOG</title>
-<link rel="shortout icon" type="image/x-icon" href="C:\Users\divya\Desktop/download.JPEG" />
+<link rel="shortout icon" type="image/x-icon" href="download.jpeg" />
 <style>
 ul{
    list-style-type: none;
@@ -57,10 +57,6 @@ ul{
 	<li><a href="term and condition.html">term and conditions</a></li>
 </h5></ul>
 	
-<center><img src="download.jpeg" height="300" width="300"</center>
-
-<body background="C:\Users\divya\Pictures/website background.JPG">
- 
-
+<center><img src="download.jpeg" height="300" width="300"</center
 </body>
 </html>
