--- a/term and condition.html
+++ b/term and condition.html
@@ -2,7 +2,7 @@
 <html>
 <head> 
 <title> Term and Conditions</title> 
-<link rel="shortout icon" type="image/x-icon" href="C:\Users\divya\Desktop/download.JPEG"/>
+<link rel="shortout icon" type="image/x-icon" href="download.JPEG"/>
 <style>
 p{
 text-align:left;
@@ -22,7 +22,7 @@ font-size:17px;
 </head>
 
 <body>
-<center><a href="https://divyanshstudies.github.io/DivyanshStudyVlog/"><img src="C:\Users\divya\Desktop/download.jpeg" height="300" width="300"></a></center>
+<center><a href="https://divyanshstudies.github.io/DivyanshStudyVlog/"><img src="download.jpeg" height="300" width="300"></a></center>
 <body background="C:\Users\divya\Desktop/best grey.JFIF">
 
 <center><h1><strong>TERM AND CONDITIONS</strong></h1><center>
