Update term and condition.html

--- a/term and condition.html
+++ b/term and condition.html
@@ -2,7 +2,7 @@
 <html>
 <head> 
 <title> Term and Conditions</title> 
-<link rel="shortout icon" type="image/x-icon" href="download.JPEG"/>
+<link rel="shortout icon" type="image/x-icon" href="download.jpeg"/>
 <style>
 p{
 text-align:left;
