--- a/contact us.html
+++ b/contact us.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head> <title>CONTACT US</title>
-<link rel="shortout icon" type="image/x-icon" href="C:\Users\divya\Desktop/download.JPEG" />
+<link rel="shortout icon" type="image/x-icon" href="download.jpeg" />
 </head>
 </html>
