Update login .html

--- a/login .html
+++ b/login .html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head><title>LOGIN FOR DIVYANSHSTUDIES</title>
-<link rel="shortout icon" type="image/x-icon" href="C:\Users\divya\Desktop/download.JPEG" />
+<link rel="shortout icon" type="image/x-icon" href="download.jpeg" />
 </head>
 <body>
-<body background="C:\Users\divya\Pictures/login background.JPG">
+<body background="login background.JPG">
 <link rel="stylesheet" href="s1.css">
 
 <div class="loginbox">
-<img src="C:\Users\divya\Pictures/avatar.PNG" class="avatar">
+<img src="avatar.png" class="avatar">
 <h1>Login Here</h1>
 <form>
           <p> username</p>
