Update login .html

--- a/login .html
+++ b/login .html
@@ -4,7 +4,7 @@
 <link rel="shortout icon" type="image/x-icon" href="download.jpeg" />
 </head>
 <body>
-<body background="login background.JPG">
+<body background="login background.jpg">
 <link rel="stylesheet" href="s1.css">
 
 <div class="loginbox">
