--- a/Privacy Policy.html
+++ b/Privacy Policy.html
@@ -2,7 +2,7 @@
 <html>
 <head> 
 <title>PRIVACY POLICY FOR DIVYANSH STUDIES</title> 
-<link rel="shortout icon" type="image/x-icon" href="C:\Users\divya\Desktop/download.JPEG"/>
+<link rel="shortout icon" type="image/x-icon" href="download.jpeg"/>
 <style>
 p{
 text-align:left;
@@ -20,8 +20,8 @@ font-size:17px;
 </style>
 </head>
 <body>
-<body background="C:\Users\divya\Desktop/best grey.JFIF">
-<center><a href="https://divyanshstudies.github.io/DivyanshStudyVlog/"><img src="C:\Users\divya\Desktop/download.jpeg" height="300" width="300"></a></center>
+<body background="best grey.jpeg">
+<center><a href="https://divyanshstudies.github.io/DivyanshStudyVlog/"><img src="download.jpeg" height="300" width="300"></a></center>
 <center><h1 style="background-color:blue; color:white; font-size:30px;font-family:verdana;height:70px; width:800px;">PRIVACY POLICY FOR DIVYANSHSTUDIES</h1></center>
 <h2 style="text-align:left;margin-left:110px;font-family:Georgia;line-height:2px;">PRIVACY POLICY</h2>
 <h3 style="text-align:left;margin-left:110px;font-family:Georgia;line-height:2px;">LAST UPDATE OF THIS POLICY-MAY2021</h3>
