--- a/Privacy Policy.html
+++ b/Privacy Policy.html
@@ -22,7 +22,7 @@ font-size:17px;
 <body>
 <body background="best grey.jpeg">
 <center><a href="https://divyanshstudies.github.io/DivyanshStudyVlog/"><img src="download.jpeg" height="300" width="300"></a></center>
-<button><center><h1 style="background-color:blue; color:white; font-size:30px;font-family:verdana;height:70px; width:800px;">PRIVACY POLICY FOR DIVYANSHSTUDIES</h1></center></button>
+<center><h1 style="background-color:blue; color:white; font-size:30px;font-family:verdana;height:70px; width:800px;">PRIVACY POLICY FOR DIVYANSHSTUDIES</h1></center>
 <h2 style="text-align:left;margin-left:110px;font-family:Georgia;line-height:2px;">PRIVACY POLICY</h2>
 <h3 style="text-align:left;margin-left:110px;font-family:Georgia;line-height:2px;">LAST UPDATE OF THIS POLICY-MAY2021</h3>
 <h4 style="text-align:left;margin-left:110px;font-family:Georgia;line-height:2px;">BEFORE USING OUR WEBSITES,PLEASE READ THIS PRIVACY POLICY CAREFULLY.</h4>
