--- a/index.html
+++ b/index.html
@@ -3,8 +3,31 @@
 
 <head>
 <title>DIVYANSH STUDY VLOG</title>
-<link rel="shortout icon" type="image/x-icon" href="download.jpeg" />
+<link rel="shortout icon" type="image/x-icon" href="C:\Users\divya\Desktop/download.JPEG" />
+<link rel="stylesheet" href="s3.css">
 <style>
+.paragraph{
+text-align:left;
+margin-left:70px;
+font-size:17px;    
+}
+p{
+margin-left:70px;
+}
+
+.footer-links{
+           text-align:left;
+           margin-left:70px;
+           font-size:17px; 
+		   c;
+}
+
+h1{
+text-align:left;
+margin-left:80px;
+font-size:17px;    
+}
+
 ul{
    list-style-type: none;
     margin:0';
@@ -34,6 +57,7 @@ ul{
 	  text-align:center;
 	  padding:14px 70px;
 	  text-decoration:none;
+	  
  }
  
  li a:hover, .dropbtn{
@@ -43,7 +67,26 @@ ul{
  .active{
          background-color:none;
  }
- </style>
+ 
+ 
+ .footer{
+          height:450px;
+          position:figure;
+		  left: 0;
+		  bottom:0;
+          width: 100%;
+		  background-color:black;
+		  color:white;
+		  text-align: center;
+ }
+ 
+ .footer-company-name{
+     text-align:left;
+margin-left:70px;
+font-size:17px; 
+ 
+ }
+</style>
 </head>
 
 <body>
@@ -51,12 +94,36 @@ ul{
 <h5><ul>
     <li><a class="active" href=" https://divyanshstudies.github.io/DivyanshStudyVlog/">home</a></li>
 	<li><a href="login .html">login</a></li>
-	<li><a href="#signup">signup</a></li>
+	<li><a href="sign up.html">SignUp</a></li>
 	<li><a href="about us.html">About Us</a></li>
 	<li><a href="contact us.html">contact us</a></li>
 	<li><a href="term and condition.html">term and conditions</a></li>
 </h5></ul>
+<center><a href="https://divyanshstudies.github.io/DivyanshStudyVlog/"><img src="C:\Users\divya\Desktop/download.jpeg" height="300" width="300"></a></center>
+<h1 style="background-color:#1c8adb; color:white; font-size:25px;font-family:verdana;font-style:italic;height:30px; width:1280px;">NCERT SOLUTION FOR CLASS 10 MATHS</h1>
+<h1 style="color:#1c8adb;font-family:courier">NCERT SOLUTION FOR CLASS 10TH MATHS FREE PDF DOWNLOAD</h1>
+<p class="paragraph">Hi guys welcome to Divyanshstudies here are Ncert solution for class 10th maths are available from chapter 1 to 15.These Ncert solutions are made by us to help the students in thier board exam preparations.Student looking for the Ncert solution of class 10th maths can download all chapterwise pdf to find a better approach to solve the problems.</p>
+<p class="paragraph">The answers to the questions present in the Ncert books are undoubtely the best study material a student can get hold of.These CBSE NCERT Solution for class 10th Maths 2021-2022 will also help students to built a deeper understanding of all concepts covered in class 10 Mths textbook.Practising the textbook questions will help student analyze their level of preparation and the knowledge of concepts.The Ncert Solutions to these questions present in the book can help students to clear their problems or doubt quickly.</p>
+<P class="paragraph">The Class 10 maths <a href ="https://divyanshstudies.github.io/DivyanshStudyVlog/">NCERT SOLUTION</a> PDFs cover all the exercises from chapters 1-15 present in the NCERT books. These class 10 maths solution are qwritten in accordance with the CBSE exam guidelines to increase the student understanding of the subject and help to score well. The ncert Solution for class 10 Mathematics pdfs will not only prepare the student for final exams but will also help to understand the concept better.Maths is important subjects of class 10 and if you are looking for reliable and accurate Ncert solution  for class 10th maths you will find that on DivyanshStudies.</P>
+
+<div class="footer">
+<p align="left"><a href="https://divyanshstudies.github.io/DivyanshStudyVlog/"><img src="C:\Users\divya\Desktop/Remove Background.PNG" height="200" width="200" ></a></p>
+ <p style="font-family:Cursive;color:white; text-align:left;">DIVYANSHSTUDIES</p>
+    <P class="footer-links">
 	
-<center><img src="download.jpeg" height="300" width="300"</center
+	<a href="https://divyanshstudies.github.io/DivyanshStudyVlog/">Home</a>
+	|
+	<a href="term and condition.html">Term and conditions</a>
+	|
+	<a href="Privacy Policy.html">Privacy policy</a>
+	|<br>
+	<a href="Sign up.html">Contact us</a>
+    
+	 </p>
+	 <p class="footer-company-name">© DivyanshStudies Pvt. Ltd.</p
+	 
+</div>
+
+	
 </body>
 </html>
