--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>DIVYANSH STUDY VLOG</title>
 <link rel="shortout icon" type="image/x-icon" href="download.jpeg" />
 <link rel="stylesheet" href="s3.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 .paragraph{
 text-align:left;
