--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <title>DIVYANSH STUDY VLOG</title>
-<link rel="shortout icon" type="image/x-icon" href="C:\Users\divya\Desktop/download.JPEG" />
+<link rel="shortout icon" type="image/x-icon" href="C:\Users\divya\Desktop/download.jpeg" />
 <link rel="stylesheet" href="s3.css">
 
 <style>
