--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <title>DIVYANSH STUDY VLOG</title>
-<link rel="shortout icon" type="image/x-icon" href="C:\Users\divya\Desktop/download.JPEG" />
+<link rel="shortout icon" type="image/x-icon" href="C:\Users\divya\Desktop/download.jpeg" />
 <link rel="stylesheet" href="s3.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
@@ -171,7 +171,7 @@ drift.load('fuvbd6gird5x');
 <P class="paragraph">The Class 10 maths <a href ="https://divyanshstudies.github.io/DivyanshStudyVlog/">NCERT SOLUTION</a> PDFs cover all the exercises from chapters 1-15 present in the NCERT books. These class 10 maths solution are qwritten in accordance with the CBSE exam guidelines to increase the student understanding of the subject and help to score well. The ncert Solution for class 10 Mathematics pdfs will not only prepare the student for final exams but will also help to understand the concept better.Maths is important subjects of class 10 and if you are looking for reliable and accurate Ncert solution  for class 10th maths you will find that on DivyanshStudies.</P>
 
 <div class="footer">
-<p align="left"><a href="https://divyanshstudies.github.io/DivyanshStudyVlog/"><img src="C:\Users\divya\Desktop/Remove Background.PNG" height="200" width="200" ></a></p>
+<p align="left"><a href="https://divyanshstudies.github.io/DivyanshStudyVlog/"><img src="C:\Users\divya\Desktop/Remove Background.png" height="200" width="200" ></a></p>
  <p style="font-family:Cursive;color:white; text-align:left;">DIVYANSHSTUDIES</p>
     <P class="footer-links">
 	
