--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <title>DIVYANSH STUDY VLOG</title>
-<link rel="shortout icon" type="image/x-icon" href="C:\Users\divya\Desktop/download.jpeg" />
+<link rel="shortout icon" type="image/x-icon" href="download.jpeg" />
 <link rel="stylesheet" href="s3.css">
 
 <style>
@@ -163,7 +163,7 @@ drift.load('fuvbd6gird5x');
 	<li><a href="contact us.html">contact us</a></li>
 	<li><a href="term and condition.html">term and conditions</a></li>
 </h5></ul>
-<center><a href="https://divyanshstudies.github.io/DivyanshStudyVlog/"><img src="C:\Users\divya\Desktop/download.jpeg" height="300" width="300"></a></center>
+<center><a href="https://divyanshstudies.github.io/DivyanshStudyVlog/"><img src="download.jpeg" height="300" width="300"></a></center>
 <h1 style="background-color:#1c8adb; color:white; font-size:25px;font-family:verdana;font-style:italic;height:30px; width:1280px;">NCERT SOLUTION FOR CLASS 10 MATHS</h1>
 <h1 style="color:#1c8adb;font-family:courier">NCERT SOLUTION FOR CLASS 10TH MATHS FREE PDF DOWNLOAD</h1>
 <p class="paragraph">Hi guys welcome to Divyanshstudies here are Ncert solution for class 10th maths are available from chapter 1 to 15.These Ncert solutions are made by us to help the students in thier board exam preparations.Student looking for the Ncert solution of class 10th maths can download all chapterwise pdf to find a better approach to solve the problems.</p>
@@ -171,7 +171,7 @@ drift.load('fuvbd6gird5x');
 <P class="paragraph">The Class 10 maths <a href ="https://divyanshstudies.github.io/DivyanshStudyVlog/">NCERT SOLUTION</a> PDFs cover all the exercises from chapters 1-15 present in the NCERT books. These class 10 maths solution are qwritten in accordance with the CBSE exam guidelines to increase the student understanding of the subject and help to score well. The ncert Solution for class 10 Mathematics pdfs will not only prepare the student for final exams but will also help to understand the concept better.Maths is important subjects of class 10 and if you are looking for reliable and accurate Ncert solution  for class 10th maths you will find that on DivyanshStudies.</P>
 
 <div class="footer">
-<p align="left"><a href="https://divyanshstudies.github.io/DivyanshStudyVlog/"><img src="C:\Users\divya\Desktop/Remove Background.png" height="200" width="200" ></a></p>
+<p align="left"><a href="https://divyanshstudies.github.io/DivyanshStudyVlog/"><img src="Remove Background.png" height="200" width="200" ></a></p>
  <p style="font-family:Cursive;color:white; text-align:left;">DIVYANSHSTUDIES</p>
     <P class="footer-links">
 	
