--- a/index.html
+++ b/index.html
@@ -150,6 +150,22 @@ drift.load('fuvbd6gird5x');
 <!-- drift ending-->
 	</script>
 	
+<script>
+<!--Feedback start-->
+  window.onUsersnapCXLoad = function(api) {
+    api.init();
+  }
+  var script = document.createElement('script');
+  script.defer = 1;
+  script.src = 'https://widget.usersnap.com/global/load/efcd94ca-d87e-4986-87c5-7a63b9392e00?onload=onUsersnapCXLoad';
+  document.getElementsByTagName('head')[0].appendChild(script);
+  <!--Feedback END-->
+</script> 
+	
+	
+	
+
+	
 <script src="https://kit.fontawesome.com/d65e1c4768.js" crossorigin="anonymous"></script>
 </head>
 
