--- a/index.html
+++ b/index.html
@@ -186,6 +186,15 @@ drift.load('fuvbd6gird5x');
 <p class="paragraph">The answers to the questions present in the Ncert books are undoubtely the best study material a student can get hold of.These CBSE NCERT Solution for class 10th Maths 2021-2022 will also help students to built a deeper understanding of all concepts covered in class 10 Mths textbook.Practising the textbook questions will help student analyze their level of preparation and the knowledge of concepts.The Ncert Solutions to these questions present in the book can help students to clear their problems or doubt quickly.</p>
 <P class="paragraph">The Class 10 maths <a href ="https://divyanshstudies.github.io/DivyanshStudyVlog/">NCERT SOLUTION</a> PDFs cover all the exercises from chapters 1-15 present in the NCERT books. These class 10 maths solution are qwritten in accordance with the CBSE exam guidelines to increase the student understanding of the subject and help to score well. The ncert Solution for class 10 Mathematics pdfs will not only prepare the student for final exams but will also help to understand the concept better.Maths is important subjects of class 10 and if you are looking for reliable and accurate Ncert solution  for class 10th maths you will find that on DivyanshStudies.</P>
 
+<div style="border:5px solid #1c8adb; text align:center;">
+<h1 style="color:#1c8adb;font-size:25px;font-family:verdana;font-style:italic;height:30px; width:1280px;margin-left:25%;">NCERT SOLUTION CLASS 10TH MATHS</h1>
+</div>
+ 
+<div style="border:5px solid #1c8adb; text align:center;">
+<h1 style="color:#1c8adb;font-size:25px;font-family:verdana;font-style:italic;height:30px; width:1280px;margin-left:35%;"><a href="C:\Users\divya\Downloads/Chapter-1_Real-Numbers.pdf">CH1 REAL NUMBERS</a></H1>
+<center><img src="C:\Users\divya\Pictures/CH1 MATHS.jfif"></center>
+</div>
+	
 <div class="footer">
 <p align="left"><a href="https://divyanshstudies.github.io/DivyanshStudyVlog/"><img src="Remove Background.png" height="200" width="200" ></a></p>
  <p style="font-family:Cursive;color:white; text-align:left;">DIVYANSHSTUDIES</p>
