--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@ drift.load('fuvbd6gird5x');
 </div>
  
 <div style="border:5px solid #1c8adb; text align:center;">
-<h1 style="color:#1c8adb;font-size:25px;font-family:verdana;font-style:italic;height:30px; width:1280px;margin-left:35%;"><a href="C:\Users\divya\Downloads/Chapter-1_Real-Numbers.pdf">CH1 REAL NUMBERS</a></H1>
-<center><img src="C:\Users\divya\Pictures/CH1 MATHS.jfif"></center>
+<h1 style="color:#1c8adb;font-size:25px;font-family:verdana;font-style:italic;height:30px; width:1280px;margin-left:35%;"><a href="C:\Users\divya\Downloads/Chapter-1_Real-Numbers.Microsoft Edge PDF ">CH1 REAL NUMBERS</a></H1>
+<center><img src="C:\Users\divya\Pictures/CH1 MATHS.JFIF"></center>
 </div>
 	
 <div class="footer">
