--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ drift.load('fuvbd6gird5x');
 </div>
  
 <div style="border:5px solid #1c8adb; text align:center;">
-<h1 style="color:#1c8adb;font-size:25px;font-family:verdana;font-style:italic;height:30px; width:1280px;margin-left:35%;"><a href="Chapter-1_Real-Numbers.pdf">CH1 REAL NUMBERS</a></H1>
+<h1 style="color:#1c8adb;font-size:25px;font-family:verdana;font-style:italic;height:30px; width:1280px;margin-left:35%;"><a href="Chapter-1_Real-Numbers.pdf">CH1 REAL NUMBERS</a></h1>
 <center><img src="CH1 MATHS.jfif"></center>
 </div>
 	
